# SloppyHands

./: .gitignore  README.md  skeletal_tracker.py
SloppyHandDriver/: CMakeLists.txt
SloppyHandDriver/driver/: driver.vrdrivermanifest
SloppyHandDriver/src/: controller_device.cpp  controller_device.h  device_provider.cpp  device_provider.h  hand_simulation.cpp  hand_simulation.h  shared_state.h  vtable_hook.cpp  vtable_hook.h
SloppyHandJob/: CMakeLists.txt  build instructions.txt
SloppyHandJob/src/: main.cpp  shared_state.h
